--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lucide-react": "^0.437.0",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
